﻿[B]Changelog[/B]
Fixed: Canvas updated their site (Fixes #677)

[I]Previous Changes[/I]
Fixed: VTM site update broke listings (Fixes #656)
Fixed: Eén stream selection issue (Fixes #557)
Fixed: VTM Nieuws playback issues
Fixed: Belgium Een channel did not stream (Issue 508)
Removed: Cobra.be for now due to incompatible site layout (Issue 508)